--- a/res/fake.ipynb
+++ b/res/fake.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -42,19 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is max: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "file=\"../data/1.mp4\"\n",
+    "file=\"../data/fake/face_417_p_att_face_v.mp4\"\n",
     "vs = cv2.VideoCapture(file)\n",
     "vs.set(cv2.CAP_PROP_FPS, 60)\n",
     "\n",
@@ -68,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] saved ./dataset/fake/2.png to disk\n"
+      "[INFO] saved ./dataset/fake/6.png to disk\n"
      ]
     }
    ],
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
