--- a/res/real.ipynb
+++ b/res/real.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -42,11 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[aac @ 0x7f78a1157e00] invalid band type\n"
+     ]
+    }
+   ],
    "source": [
-    "file=\"../data/1.mp4\"\n",
+    "file=\"../data/real/Bvideo20200305093359.mp4\"\n",
     "vs = cv2.VideoCapture(file)\n",
     "vs.set(cv2.CAP_PROP_FPS, 60)\n",
     "\n",
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] saved ./dataset/real/1.png to disk\n"
+      "[INFO] saved ./dataset/real/3.png to disk\n"
      ]
     }
    ],
@@ -110,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
