2D histogram plotting for hsv, rgb, lab & ycbcr

--- a/res/fake.ipynb
+++ b/res/fake.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
     "vs = cv2.VideoCapture(file)\n",
     "vs.set(cv2.CAP_PROP_FPS, 60)\n",
     "\n",
-    "real_file_path = \"../res/dataset/real/*.png*\"\n",
-    "fake_file_path = \"../res/dataset/fake/*.png*\"\n",
+    "real_file_path = \"../dataset/real/*.png*\"\n",
+    "fake_file_path = \"../dataset/fake/*.png*\"\n",
     "\n",
     "max_file_fullpath = (max(glob.glob(fake_file_path), key=os.path.getmtime))\n",
     "max_file = os.path.basename(max_file_fullpath)\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] saved ./dataset/fake/6.png to disk\n"
+      "[INFO] saved ../dataset/fake/7.png to disk\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
     "        (startX, startY, endX, endY) = box.astype(\"int\")\n",
     "        face = frame[startY:endY, startX:endX]\n",
     "\n",
-    "        p = os.path.sep.join(['./dataset/fake',\n",
+    "        p = os.path.sep.join(['../dataset/fake',\n",
     "            \"{}.png\".format(saved)])\n",
     "        cv2.imwrite(p, face)\n",
     "        saved += 1\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
