--- a/res/real.ipynb
+++ b/res/real.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[aac @ 0x7f78a1157e00] invalid band type\n"
+      "[aac @ 0x7f7867978000] invalid band type\n"
      ]
     }
    ],
@@ -58,8 +58,8 @@
     "vs = cv2.VideoCapture(file)\n",
     "vs.set(cv2.CAP_PROP_FPS, 60)\n",
     "\n",
-    "real_file_path = \"../res/dataset/real/*.png*\"\n",
-    "fake_file_path = \"../res/dataset/fake/*.png*\"\n",
+    "real_file_path = \"../dataset/real/*.png*\"\n",
+    "fake_file_path = \"../dataset/fake/*.png*\"\n",
     "\n",
     "max_file_fullpath = (max(glob.glob(real_file_path), key=os.path.getmtime))\n",
     "max_file = os.path.basename(max_file_fullpath)\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] saved ./dataset/real/3.png to disk\n"
+      "[INFO] saved ../dataset/real/4.png to disk\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     "        (startX, startY, endX, endY) = box.astype(\"int\")\n",
     "        face = frame[startY:endY, startX:endX]\n",
     "\n",
-    "        p = os.path.sep.join(['./dataset/real',\n",
+    "        p = os.path.sep.join(['../dataset/real',\n",
     "            \"{}.png\".format(saved)])\n",
     "        cv2.imwrite(p, face)\n",
     "        saved += 1\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
