Beautify plotted histogram

--- a/res/color-space-histogram.ipynb
+++ b/res/color-space-histogram.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = tf.keras.preprocessing.image.array_to_img(fake)\n",
+    "img = tf.keras.preprocessing.image.array_to_img(real)\n",
     "array = tf.keras.preprocessing.image.img_to_array(img)\n",
     "print(array)"
    ]
@@ -171,6 +171,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,6 +248,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(H)\n",
+    "print(H)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(S)\n",
+    "print(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(V)\n",
+    "print(V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Y = np.array([])\n",
     "Cr = np.array([])\n",
     "Cb = np.array([])\n",
@@ -230,7 +305,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=[20,10])\n",
@@ -240,6 +317,32 @@
     "plt.xlabel('Cr')\n",
     "plt.ylabel('Cb')\n",
     "plt.title('YCrCb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(Cr)\n",
+    "print(Cr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(Cb)\n",
+    "print(Cb)"
    ]
   },
   {
@@ -267,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=[20,10])\n",
@@ -277,6 +382,30 @@
     "plt.xlabel('A')\n",
     "plt.ylabel('B')\n",
     "plt.title('LAB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(LA)\n",
+    "print(LA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[20,10])\n",
+    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.plot(LB)\n",
+    "print(LB)"
    ]
   },
   {
