1D histogram for hsv, YCbCr, lab & rgb

--- a/res/color-space-histogram.ipynb
+++ b/res/color-space-histogram.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# fake = cv2.imread('../dataset/fake/1.png')\n",
-    "real = cv2.imread('../dataset/real/2.png')\n",
+    "real = cv2.imread('../dataset/real/3.png')\n",
     "(row, col) = real.shape[0:2]\n",
     "h, w, c = real.shape\n",
     "\n",
@@ -177,32 +177,15 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "plt.title('R')\n",
+    "plt.subplot(2,3,2)\n",
+    "plt.plot(R)\n",
+    "plt.title('G')\n",
+    "plt.subplot(2,3,3)\n",
+    "plt.plot(G)\n",
+    "plt.title('B')\n",
+    "plt.subplot(2,3,1)\n",
     "plt.plot(B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
-    "plt.plot(G)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
-    "plt.plot(R)"
    ]
   },
   {
@@ -249,35 +232,19 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "# plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "\n",
+    "plt.title('H')\n",
+    "plt.subplot(2,3,2)\n",
     "plt.plot(H)\n",
-    "print(H)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "\n",
+    "plt.title('S')\n",
+    "plt.subplot(2,3,1)\n",
     "plt.plot(S)\n",
-    "print(S)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
-    "plt.plot(V)\n",
-    "print(V)"
+    "\n",
+    "plt.title('V')\n",
+    "plt.subplot(2,3,3)\n",
+    "plt.plot(V)"
    ]
   },
   {
@@ -328,21 +295,14 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "\n",
+    "plt.title('Cr')\n",
+    "plt.subplot(2,3,1)\n",
     "plt.plot(Cr)\n",
-    "print(Cr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
-    "plt.plot(Cb)\n",
-    "print(Cb)"
+    "\n",
+    "plt.title('Cb')\n",
+    "plt.subplot(2,3,2)\n",
+    "plt.plot(Cb)"
    ]
   },
   {
@@ -355,7 +315,7 @@
     "LA = np.array([])\n",
     "LB = np.array([])\n",
     "\n",
-    "lab = cv2.cvtColor(k,cv2.COLOR_BGR2LAB)\n",
+    "lab = cv2.cvtColor(real,cv2.COLOR_BGR2LAB)\n",
     "ll = lab[:,:,0]\n",
     "ll = ll.reshape(ll.shape[0]*ll.shape[1])\n",
     "la = lab[:,:,1]\n",
@@ -391,9 +351,14 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
+    "\n",
+    "plt.title('LA')\n",
+    "plt.subplot(2,3,1)\n",
     "plt.plot(LA)\n",
-    "print(LA)"
+    "\n",
+    "plt.title('LB')\n",
+    "plt.subplot(2,3,2)\n",
+    "plt.plot(LB)"
    ]
   },
   {
@@ -401,12 +366,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "plt.figure(figsize=[20,10])\n",
-    "plt.subplot2grid((2,3), (0,0), colspan=3)\n",
-    "plt.plot(LB)\n",
-    "print(LB)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
