model with added dataset

--- a/res/real.ipynb
+++ b/res/real.ipynb
@@ -10,29 +10,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import argparse\n",
     "from cv2 import cv2\n",
-    "import os, glob"
+    "import os, glob\n",
+    "import shutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] loading face detector...\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# #copy files from another folder with filter\n",
+    "# for filename in glob.iglob('../data/Selfie/**', recursive=True):\n",
+    "#     if os.path.isfile(filename): # filter dirs\n",
+    "#         if filename.find(\"face\") != -1: \n",
+    "#             shutil.copy2(filename, \"../data/real/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"[INFO] loading face detector...\")\n",
     "protoPath = \"../res/face_detector/deploy.prototxt\" \n",
@@ -42,89 +48,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[aac @ 0x7f7867978000] invalid band type\n"
-     ]
-    }
-   ],
-   "source": [
-    "file=\"../data/real/Bvideo20200305093359.mp4\"\n",
-    "vs = cv2.VideoCapture(file)\n",
-    "vs.set(cv2.CAP_PROP_FPS, 60)\n",
-    "\n",
-    "real_file_path = \"../dataset/real/*.png*\"\n",
-    "fake_file_path = \"../dataset/fake/*.png*\"\n",
-    "\n",
-    "max_file_fullpath = (max(glob.glob(real_file_path), key=os.path.getmtime))\n",
-    "max_file = os.path.basename(max_file_fullpath)\n",
-    "max_filename = int(max_file.split(\".\")[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "with os.scandir(\"../data/real/\") as it:\n",
+    "    for entry in it:\n",
+    "        if entry.name != \".DS_Store\" and entry.is_file():\n",
+    "            vs = cv2.VideoCapture(entry.path)\n",
+    "            vs.set(cv2.CAP_PROP_FPS, 60)\n",
+    "            print(entry.name)\n",
     "\n",
-    "read = 0\n",
-    "saved = max_filename+1 #manual\n",
-    "(grabbed, frame) = vs.read()\n",
-    "read += 1\n",
+    "            fake_file_path = \"../dataset/real/*.png*\"\n",
     "\n",
-    "(h, w) = frame.shape[:2]\n",
-    "blob = cv2.dnn.blobFromImage(cv2.resize(frame, (300, 300)), 1.0,\n",
-    "    (300, 300), (104.0, 177.0, 123.0))"
+    "            max_file_fullpath = (max(glob.glob(fake_file_path), key=os.path.getmtime))\n",
+    "            max_file = os.path.basename(max_file_fullpath)\n",
+    "            max_filename = int(max_file.split(\".\")[0])\n",
+    "            read = 0\n",
+    "            saved = max_filename+1 #manual\n",
+    "            (grabbed, frame) = vs.read()\n",
+    "            read += 1\n",
+    "\n",
+    "            (h, w) = frame.shape[:2]\n",
+    "            blob = cv2.dnn.blobFromImage(cv2.resize(frame, (300, 300)), 1.0,\n",
+    "                (300, 300), (104.0, 177.0, 123.0))\n",
+    "            net.setInput(blob)\n",
+    "            detections = net.forward()\n",
+    "\n",
+    "            if len(detections) > 0:\n",
+    "                i = np.argmax(detections[0, 0, :, 2])\n",
+    "                confidence = detections[0, 0, i, 2]\n",
+    "\n",
+    "                if confidence > 0.5:\n",
+    "                    box = detections[0, 0, i, 3:7] * np.array([w, h, w, h])\n",
+    "                    (startX, startY, endX, endY) = box.astype(\"int\")\n",
+    "                    face = frame[startY:endY, startX:endX]\n",
+    "\n",
+    "                    p = os.path.sep.join(['../dataset/real',\n",
+    "                        \"{}.png\".format(saved)])\n",
+    "                    cv2.imwrite(p, face)\n",
+    "                    saved += 1\n",
+    "                    print(\"[INFO] saved {} to disk\".format(p))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] saved ../dataset/real/4.png to disk\n"
-     ]
-    }
-   ],
-   "source": [
-    "net.setInput(blob)\n",
-    "detections = net.forward()\n",
-    "\n",
-    "if len(detections) > 0:\n",
-    "    i = np.argmax(detections[0, 0, :, 2])\n",
-    "    confidence = detections[0, 0, i, 2]\n",
-    "\n",
-    "    if confidence > 0.5:\n",
-    "        box = detections[0, 0, i, 3:7] * np.array([w, h, w, h])\n",
-    "        (startX, startY, endX, endY) = box.astype(\"int\")\n",
-    "        face = frame[startY:endY, startX:endX]\n",
-    "\n",
-    "        p = os.path.sep.join(['../dataset/real',\n",
-    "            \"{}.png\".format(saved)])\n",
-    "        cv2.imwrite(p, face)\n",
-    "        saved += 1\n",
-    "        print(\"[INFO] saved {} to disk\".format(p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "vs.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +116,7 @@
    "hash": "65981a3d75d6deafcbdcc1419973435499a43617da3c77a53a836b8eaed42c95"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit ('color': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -147,8 +131,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
