--- a/res/training.ipynb
+++ b/res/training.ipynb
@@ -144,7 +144,7 @@
    "execution_count": null,
    "id": "5088ae82",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
