--- a/res/fake.ipynb
+++ b/res/fake.ipynb
@@ -43,9 +43,10 @@
    "source": [
     "with os.scandir(\"../data/fake/\") as it:\n",
     "    for entry in it:\n",
-    "        if entry.name.endswith(\".mp4\") and entry.is_file():\n",
+    "        if entry.name != \".DS_Store\" and entry.is_file():\n",
     "            vs = cv2.VideoCapture(entry.path)\n",
     "            vs.set(cv2.CAP_PROP_FPS, 60)\n",
+    "            print(entry.name)\n",
     "\n",
     "            fake_file_path = \"../dataset/fake/*.png*\"\n",
     "\n",
@@ -88,6 +89,13 @@
     "vs.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
