--- a/res/histogram1d.ipynb
+++ b/res/histogram1d.ipynb
@@ -11,9 +11,7 @@
     "import sys\n",
     "import skimage.io\n",
     "from matplotlib import pyplot as plt\n",
-    "from cv2 import cv2\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras"
+    "from cv2 import cv2"
    ]
   },
   {
@@ -25,55 +23,18 @@
    },
    "outputs": [],
    "source": [
-    "image = skimage.io.imread('../dataset/fake/2.png')\n",
-    "image2 = skimage.io.imread('../dataset/fake/1.png')\n",
-    "skimage.io.imshow(image2)\n",
-    "# skimage.io.imshow(image)\n",
-    "\n",
-    "# image2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1007b4e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rgb = image / 255.0\n",
-    "rgb2 = image2 / 255.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "509a37d6",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# colors = (\"red\", \"green\", \"blue\")\n",
-    "# channel_ids = (0, 1, 2)\n",
-    "\n",
-    "# plt.xlim([0, 256])\n",
-    "# for channel_id, c in zip(channel_ids, colors):\n",
-    "#     histogram, bin_edges = np.histogram(\n",
-    "#         image2[:, :, channel_id], bins=256, range=(0, 256)\n",
-    "#     )\n",
-    "#     plt.plot(bin_edges[0:-1], histogram, color=c)\n",
-    "\n",
-    "# plt.xlabel(\"Color value\")\n",
-    "# plt.ylabel(\"Pixels\")\n",
-    "\n",
-    "# plt.show()"
+    "image = skimage.io.imread('../dataset/fake/17.png')\n",
+    "image2 = skimage.io.imread('../dataset/real/839.png')\n",
+    "skimage.io.imshow(image2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "996a6f7e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "img = image2\n",
@@ -86,6 +47,56 @@
     "plt.plot(hist_b, color='b', label=\"b\")\n",
     "plt.legend()\n",
     "plt.show() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e89d62a1",
+   "metadata": {},
+   "source": [
+    "##### Histogram equalization \n",
+    "link for reference: https://medium.com/@rndayala/image-histograms-in-opencv-40ee5969a3b7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce56526a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels = cv2.split(image2)\n",
+    "eq_channels = []\n",
+    "for ch, color in zip(channels, ['B', 'G', 'R']):\n",
+    "    eq_channels.append(cv2.equalizeHist(ch))\n",
+    "eq_image = cv2.merge(eq_channels)\n",
+    "\n",
+    "skimage.io.imshow(eq_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba2302d4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "channels = ('b', 'g', 'r')\n",
+    "for i, color in enumerate(channels):\n",
+    "    histogram = cv2.calcHist([eq_image], [i], None, [256], [0, 256])\n",
+    "    plt.plot(histogram, color=color)\n",
+    "    plt.xlim([0, 256])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bcb8005",
+   "metadata": {},
+   "source": [
+    "### HSV Histogram"
    ]
   },
   {
@@ -108,6 +119,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8710fce2",
+   "metadata": {},
+   "source": [
+    "### YCbCr Histogram"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "aecfd7d3",
@@ -127,6 +146,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30901c56",
+   "metadata": {},
+   "source": [
+    "### LAB Histogram"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ed3e8bcd",
@@ -138,9 +165,61 @@
     "hist_l = cv2.calcHist([l],[0],None,[256],[0,256])\n",
     "hist_a = cv2.calcHist([a],[0],None,[256],[0,256])\n",
     "hist_b = cv2.calcHist([b],[0],None,[256],[0,256])\n",
-    "plt.plot(hist_l, color='r', label=\"Y\")\n",
-    "plt.plot(hist_a, color='g', label=\"Cb\")\n",
-    "plt.plot(hist_b, color='b', label=\"Cr\")\n",
+    "plt.plot(hist_l, color='r', label=\"L\")\n",
+    "plt.plot(hist_a, color='g', label=\"A\")\n",
+    "plt.plot(hist_b, color='b', label=\"B\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a92dfdc1",
+   "metadata": {},
+   "source": [
+    "##### Histogram Concatenation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a36b172",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "plt.figure(figsize=(13, 7))\n",
+    "\n",
+    "hist_l = cv2.calcHist([l],[0],None,[256],[0,256])\n",
+    "hist_a = cv2.calcHist([a],[0],None,[256],[0,256])\n",
+    "hist_b = cv2.calcHist([b],[0],None,[256],[0,256])\n",
+    "plt.plot(hist_l, color='orange', label=\"L\")\n",
+    "plt.plot(hist_a, color='tan', label=\"A\")\n",
+    "plt.plot(hist_b, color='navajowhite', label=\"B\")\n",
+    "\n",
+    "hist_Y = cv2.calcHist([Y],[0],None,[256],[0,256])\n",
+    "hist_Cb = cv2.calcHist([Cb],[0],None,[256],[0,256])\n",
+    "hist_Cr = cv2.calcHist([Cr],[0],None,[256],[0,256])\n",
+    "plt.plot(hist_Y, color='slateblue', label=\"Y\")\n",
+    "plt.plot(hist_Cb, color='lightseagreen', label=\"Cb\")\n",
+    "plt.plot(hist_Cr, color='teal', label=\"Cr\")\n",
+    "\n",
+    "hist_h = cv2.calcHist([h],[0],None,[256],[0,256])\n",
+    "hist_s = cv2.calcHist([s],[0],None,[256],[0,256])\n",
+    "hist_v = cv2.calcHist([v],[0],None,[256],[0,256])\n",
+    "plt.plot(hist_h, color='mediumvioletred', label=\"h\")\n",
+    "plt.plot(hist_s, color='blueviolet', label=\"s\")\n",
+    "plt.plot(hist_v, color='deeppink', label=\"v\")\n",
+    "\n",
+    "hist_b = cv2.calcHist([b],[0],None,[256],[0,256])\n",
+    "hist_g = cv2.calcHist([g],[0],None,[256],[0,256])\n",
+    "hist_r = cv2.calcHist([r],[0],None,[256],[0,256])\n",
+    "plt.plot(hist_r, color='r', label=\"r\")\n",
+    "plt.plot(hist_g, color='g', label=\"g\")\n",
+    "plt.plot(hist_b, color='b', label=\"b\")\n",
+    "\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -148,10 +227,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18f205b",
+   "id": "25fb4db7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "features = []           \n",
+    "\n",
+    "f = np.concatenate((hist_l,hist_a,hist_b,hist_Y,hist_Cb,hist_Cr,hist_h,hist_s,hist_v,hist_r,hist_g,hist_b)) \n",
+    "arr = np.array(f).flatten()\n",
+    "features.append(arr)\n",
+    "\n",
+    "plt.plot(arr, color='slateblue', label=\"r\")"
+   ]
   }
  ],
  "metadata": {
