--- a/res/training.ipynb
+++ b/res/training.ipynb
@@ -18,7 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pyimagesearch.livenessnet import LivenessNet\n",
     "from ok.mask import LivenessNet\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -54,7 +53,7 @@
    "outputs": [],
    "source": [
     "print(\"[INFO] loading images...\")\n",
-    "dataset =  (\"../dataset/\")\n",
+    "dataset =  (\"../dataset-ori/\")\n",
     "imagePaths = list(paths.list_images(dataset))\n",
     "data = []\n",
     "labels = []"
@@ -144,7 +143,7 @@
    "execution_count": null,
    "id": "5088ae82",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
